# cogite

./: CHANGES.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg
.github/workflows/: ci.yaml
docs/: Makefile  commands.rst  conf.py  configuration.rst  contributing.rst  extending.rst  faq.rst  features.rst  getting_started.rst  index.rst  intro.rst
extra/: completion.zsh
src/cogite/: api.py  auth.py  cache.py  cli.py  completion.py  config.py  context.py  errors.py  git.py  interaction.py  models.py  plugins.py  requests.py  shell.py  spinner.py  version.py
src/cogite/backends/: __init__.py  base.py  github.py
src/cogite/backends/graphql/github/: mutation_create_pull_request.graphql  mutation_mark_as_ready.graphql  mutation_request_reviews.graphql  query_pull_request.graphql  query_pull_request_status.graphql  query_repository.graphql  query_repository_contributors.graphql
src/cogite/checks/: pre_merge.py
src/cogite/commands/: __init__.py  auth.py  ci_browse.py  helpers.py  pr_add.py  pr_browse.py  pr_edit.py  pr_merge.py  pr_rebase.py  pr_reviews.py  status.py
tests/: base.py  requests_mocker.py  test_context.py  test_git.py  test_github.py  test_interaction.py  test_plugins.py  test_shell.py
tests/data/github/: pull_request_status_checks.json  pull_request_status_commit_states.json
tests/data/graphql_responses/: generate.py  recorders.toml
tests/data/graphql_responses/github/: mutation_create_pull_request.json  mutation_mark_as_ready.json  mutation_request_reviews.json  query_pull_request.json  query_pull_request_status.json  query_repository.json  query_repository_contributors.json
