[metadata]
name = cogite
version = 0.5.0.dev0
description = FIXME
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://cogite.readthedocs.io/en/latest/
author = Polyconseil
author_email = opensource+cogite@polyconseil.fr
license = BSD-3-Clause
license_files = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
keywords = FIXME
platform = any
project_urls =
    Documentation = https://cogite.readthedocs.io/en/latest/
    Source = https://github.com/Polyconseil/cogite
    Bug Tracker =  https://github.com/Polyconseil/cogite/issues

[options]
python_requires = >=3.6
install_requires =
    dataclasses; python_version<"3.7"
    importlib_metadata; python_version<"3.8"
    prompt_toolkit
    toml
    yaspin
package_dir=
    =src
packages=find:

[options.entry_points]
console-scripts =
    cogite = cogite.cli:main

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[zest.releaser]
create-wheel = yes
